# mofa-local-llm

./: .gitignore  Cargo.toml  PLAN.md  build.rs  library_api.md
cpp/: CMakeLists.txt  llm_server.cpp  llm_server.h
src/: config.rs  download.rs  lib.rs  lib_api.rs  main.rs
src/api/: handlers.rs  server.rs
src/asr/: audio.rs  engine.rs  mod.rs
src/asr/funasr/: engine.rs  mod.rs  model.rs
src/audio/: mod.rs
src/gui/: app.rs  mod.rs
src/llm/: ffi.rs  mod.rs
